Ctrl+A apply modifier does not show more important info message #85716

Closed
opened 2021-02-17 03:09:25 +01:00 by Brecht Van Lommel · 5 comments

System Information
Operating system: macOS-11.2.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 71.0.7

Blender Version
Broken: version: 2.93.0 Alpha

Short description of error
Introduced in 1fa40c9f8a.

When applying a modifier there can be these info messages like these, which should appear in the status bar:

  • Applied modifier was not first, result may not be as expected
  • Applied modifier only changed CV points, not tessellated/bevel vertices

However it always shows "Applied modifier: Name", pushing away the more important message.

Exact steps for others to reproduce the error

  • Add two modifiers to the default cube
  • Press Ctrl+A over the second modifier
**System Information** Operating system: macOS-11.2.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 71.0.7 **Blender Version** Broken: version: 2.93.0 Alpha **Short description of error** Introduced in 1fa40c9f8a. When applying a modifier there can be these info messages like these, which should appear in the status bar: * Applied modifier was not first, result may not be as expected * Applied modifier only changed CV points, not tessellated/bevel vertices However it always shows "Applied modifier: Name", pushing away the more important message. **Exact steps for others to reproduce the error** * Add two modifiers to the default cube * Press Ctrl+A over the second modifier
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht
Author
Owner

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Owner

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Brecht Van Lommel changed title from Ctrl+A apply modifier does not show important info message to Ctrl+A apply modifier does not show more important info message 2021-02-17 03:10:37 +01:00
Hans Goudey self-assigned this 2021-02-17 06:33:55 +01:00

This issue was referenced by 47a269745e

This issue was referenced by 47a269745ef2a6181fd139dca4d6975d6a8e1038
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85716
No description provided.